# embassy-ha

./: Cargo.toml  README.md  release.sh
.claude/commands/: release.md
examples/: binary_sensor.rs  button.rs  device_tracker.rs  number.rs  sensor.rs  switch.rs  temperature.rs
examples/common/: mod.rs  std_async_tcp.rs
src/: binary_state.rs  command_policy.rs  constants.rs  entity.rs  entity_binary_sensor.rs  entity_button.rs  entity_category.rs  entity_number.rs  entity_sensor.rs  entity_switch.rs  lib.rs  unit.rs
src/mqtt/: mod.rs  qos.rs  rx.rs  tx.rs  varint.rs
